// Copyright 2019 SolarNetwork Foundation.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
//

syntax = "proto3";

package solarnetwork.esi.domain;

option cc_enable_arenas = true;
option java_multiple_files = true;
option java_outer_classname = "PriceMapOfferStatusProto";
option java_package = "net.solarnetwork.esi.domain";
option objc_class_prefix = "ESI";

import "solarnetwork/esi/domain/uuid.proto";

// Status information for a price map offer.
message PriceMapOfferStatus {

  // The globally unique ID of the offer this status is for.
  Uuid offer_id = 1;
  
  enum Status {
  	UNKNOWN = 0;
  	ACCEPTED = 1;
  	REJECTED = 2;
  	EXECUTING = 3;
  	COMPLETED = 4;
  }

  // The offer status.
  Status status = 2;

}
